# tau-agent

./: .clinerules  .gitignore  Dockerfile.api  Dockerfile.dev  Dockerfile.worker  Makefile  README.md  compose.dev.yml  compose.yml  config.example.json  pyproject.toml
docs/: api.md
example/: README.md  chat.ts  package-lock.json  package.json  psi_manual.py  run-chat.sh  test.sh
src/tau/: chat.py  client.py  config.py  llm.py  logger.py  main.py  message_store.py  types.py
tau/: __init__.py  __main__.py  celery.py  client.py  fastapi.py  worker.py
tau/agent/: __init__.py  agent.py  llms.py  tools.py
tau/agent/core/: agent.py  llms.py  tools.py
tau/agent/tools/: http_get_json.py  http_json_request.py  http_request.py  sub_agent.py  tavily.py
tau/api/: __init__.py  ask_agent.py  create_agent.py  end_agent.py  healthz.py
tau/worker/: celery.py
