[project]
name = "tau"
version = "0.1.0"
description = "tau agent"
authors = [
    {name = "Ryosuke Hayashi"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.4.1",
    "anthropic>=0.49.0",
    "boto3>=1.37.17",
]

[project.scripts]
tau-chat = "tau.main:chat"
tau-json-server = "tau.main:json_server"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "ruff>=0.9.7",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
